# Car-Braking-System

./: CMakeLists.txt  README.md  accelerometer.h  ldr.c  led.h  main.c  motor.h  ultrasound.c  ultrasound.h
milestone2/: CMakeLists.txt  accelerometer.c  buzzer.c  buzzer.h  ldr.h  led.c  main.c  motor.c
